bk_ida/gccida/c1/store_expr
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/store_expr/src/expr.c:4391:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v13; // edx 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/store_expr/src/expr.c:4399:4: error: expected ';' after expression
rtx v21; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/store_expr/src/expr.c:4399:5: error: use of undeclared identifier 'v21'; did you mean 'v11'?
rtx v21; // rax 
    ^~~
    v11
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/store_expr/src/expr.c:4389:18: note: 'v11' declared here
 struct rtx_def *v11; // rbx 
                 ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/store_expr/src/expr.c:4404:4: error: expected ';' after expression
rtx v26; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/store_expr/src/expr.c:4404:5: error: use of undeclared identifier 'v26'
rtx v26; // rax 
    ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/store_expr/src/expr.c:4411:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v33; // edi 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/store_expr/src/expr.c:4417:4: error: expected ';' after expression
rtx v39; // r12 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/store_expr/src/expr.c:4417:5: error: use of undeclared identifier 'v39'
rtx v39; // r12 
    ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/store_expr/src/expr.c:4422:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v44; // edi 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/store_expr/src/expr.c:4425:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *tree; // rbx 
^
union 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/store_expr/src/expr.c:4426:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v48; // rax 
^
union 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/store_expr/src/expr.c:4427:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v49; // rbx 
^
union 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/store_expr/src/expr.c:4429:4: error: expected ';' after expression
rtx v51; // rbp 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/store_expr/src/expr.c:4429:5: error: use of undeclared identifier 'v51'
rtx v51; // rbp 
    ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/store_expr/src/expr.c:4430:4: error: expected ';' after expression
rtx v52; // r12 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/store_expr/src/expr.c:4430:5: error: use of undeclared identifier 'v52'
rtx v52; // r12 
    ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/store_expr/src/expr.c:4434:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v57; // rax 
^
union 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/store_expr/src/expr.c:4435:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v58; // rax 
^
union 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/store_expr/src/expr.c:4486:22: error: use of undeclared identifier 'machine_mode'
v26 = gen_reg_rtx( ( machine_mode)( unsigned __int8)BYTE2( *( _DWORD *)target)); 
                     ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/store_expr/src/obj/expr.o] Error 1
